fixed a layout issue

--- a/public/css/job-offers.css
+++ b/public/css/job-offers.css
@@ -409,10 +409,10 @@ bot {
 
 .search-container input {
   width: 50%;
-  height: 80%;
+  height: 80px;
   border: none;
   outline: none;
-  background: rgb(221, 220, 220);
+  background: #fff;
   font-family: inherit;
   font-size: 18px;
   color: #0c0e1c;
@@ -421,12 +421,13 @@ bot {
 
 .search-container button {
   width: 10%;
-  height: 80%;
-  padding: 2rem;
+  height: 80px;
+  padding: 0 2rem;
   border: none;
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  display: flex;
   color: #fff;
   background: #1da978;
   font-family: inherit;
